# pg

./: README.md
DS&A/dynamic-sparse-table/: README.md  main.cpp  main.cpp.txt
DS&A/stack-processor/: README.md  stack_processor.cpp
DS&A/weighted-dijkstra-shortest-path/: README.md  README.md.txt  main.cpp
OOP_class/C++_WorldSimulation/: Animal.cpp  Animal.h  Antelope.cpp  Antelope.h  CMakeLists.txt  Dandelion.cpp  Dandelion.h  Fox.cpp  Fox.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Hogweed.cpp  Hogweed.h  Human.cpp  Human.h  Nightshade.cpp  Nightshade.h  Organism.cpp  Organism.h  PO_1  Plant.cpp  Plant.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h  World.cpp  World.h  execcommand  game  game1  load_config.cpp  load_config.h  main.cpp
Web_applications/PHP-photo-gallery/: .htaccess
Web_applications/PHP-photo-gallery/config/: DB.php
Web_applications/PHP-photo-gallery/controllers/: ErrorController.php  GalleryController.php  UserController.php
Web_applications/PHP-photo-gallery/models/: Image.php  User.php
Web_applications/PHP-photo-gallery/views/: Error404View.php  gallery.php  login.php  register.php  showSelected.php  upload.php  viewImage.php
Web_applications/PHP-photo-gallery/web/: admin.js  app.php  wai.js
introduction_to_coding/crossy_frog/: main.cpp
introduction_to_coding/crossy_frog/headers/: funcs.h  gameconf.h  structs.h
introduction_to_coding/snake_game/: comp.txt  corefuncs.cpp  corefuncs.h  defs.h  game_over.cpp  gameover.h  graphics.cpp  graphics.h  leaderboard.txt  main.cpp
(+11 files in other folders)
